--- a/data/cod-rna.conf
+++ b/data/cod-rna.conf
@@ -23,12 +23,14 @@ max_depth = 5
 robust_training_verbose=false
 # Task Parameters
 # the number of round to do boosting
-num_round = 200
+num_round = 80
 # 0 means do not save any model except the final round model
-save_period = 1
+save_period = 0
 # The path of training data
-data = "data/cod-rna_s"
+data = "data/cod-rna.train.csv?format=csv&label_column=0"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "data/cod-rna_s.t"
+eval[test] = "data/cod-rna.test.csv?format=csv&label_column=0"
 # The path of test data
-test:data = "data/cod-rna_s.t"
+test:data = "data/cod-rna.test.csv?format=csv&label_column=0"
+
+model_out = '../growtrees/models/gbdt/cod-rna_new/robust_cod-rna.bin'
