--- a/data/cod-rna.greedy.conf
+++ b/data/cod-rna.greedy.conf
@@ -4,21 +4,21 @@ booster = gbtree
 # choose logistic regression loss function for binary classification
 objective = binary:logistic
 # use robust learning
-tree_method = exact 
+tree_method = robust_centergreedy
 
 
 # nthread = 16
 # Tree Booster Parameters
 # step size shrinkage
-eta = 0.2
+eta = 0.1
 # robust training eps
-robust_eps = 0.2
+robust_eps = 0.018
 # minimum loss reduction required to make a further partition
 gamma = 1.0
 # minimum sum of instance weight(hessian) needed in a child
 min_child_weight = 1
 # maximum depth of a tree
-max_depth = 4
+max_depth = 5
 
 robust_training_verbose=false
 # Task Parameters
@@ -33,4 +33,4 @@ eval[test] = "data/cod-rna.test.csv?format=csv&label_column=0"
 # The path of test data
 test:data = "data/cod-rna.test.csv?format=csv&label_column=0"
 
-model_out = '../growtrees/models/gbdt/cod-rna_new/nature_cod-rna.bin'
+model_out = '../growtrees/models/gbdt/cod-rna_new/greedy_cod-rna_center_eps0.018_nr80_md5.bin'
