update cod-rna training conf

--- a/data/cod-rna.conf
+++ b/data/cod-rna.conf
@@ -1,4 +1,4 @@
-# General Parameters, see comment for each definition
+#camera-ready/ General Parameters, see comment for each definition
 # can be gbtree or gblinear
 booster = gbtree
 # choose logistic regression loss function for binary classification
@@ -33,4 +33,4 @@ eval[test] = "data/cod-rna.test.csv?format=csv&label_column=0"
 # The path of test data
 test:data = "data/cod-rna.test.csv?format=csv&label_column=0"
 
-model_out = '../growtrees/models/gbdt/cod-rna_new/robust_cod-rna.bin'
+model_out = '../growtrees/models/gbdt/robust_cod-rna.bin'
