--- a/data/cod-rna.greedy.conf
+++ b/data/cod-rna.greedy.conf
@@ -10,9 +10,9 @@ tree_method = robust_centergreedy
 # nthread = 16
 # Tree Booster Parameters
 # step size shrinkage
-eta = 0.1
+eta = 0.02
 # robust training eps
-robust_eps = 0.03
+robust_eps = 0.035
 # minimum loss reduction required to make a further partition
 gamma = 1.0
 # minimum sum of instance weight(hessian) needed in a child
@@ -33,4 +33,4 @@ eval[test] = "data/cod-rna.test.csv?format=csv&label_column=0"
 # The path of test data
 test:data = "data/cod-rna.test.csv?format=csv&label_column=0"
 
-model_out = '../growtrees/models/gbdt/greedy_cod-rna_center_eps0.03.bin'
+model_out = '../growtrees/models/gbdt/greedy_cod-rna_center_eps0.035_eta0.02.bin'
